文件显示页面完成

--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -155,13 +155,13 @@
                         <span class="span_file_attr">修改日期</span>
                     </div>
                 </div>
-                <div id="file_main">
+                <div id="file_main" style="">
                     <table id="file_table">
-                        <tr class="file_tr" lable="" file_type="">
+                        <tr class="file_tr">
                             <td class="file_left">
                                 <input type="checkbox" name="" id="">
                                 <img src="img/file/file_ico/folder.png" class="file_img">
-                                <span class="file_name">麻瓜编程2017</span>
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
                             <td class="file_mid">34</td>
                             <td class="file_right">34</td>
@@ -179,7 +179,125 @@
                             <td class="file_left">
                                 <input type="checkbox" name="" id="">
                                 <img src="img/file/file_ico/folder.png" class="file_img">
-                                <span class="file_name">麻瓜编程2017</span>
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
+                            </td>
+                            <td class="file_mid">34</td>
+                            <td class="file_right">34</td>
+                        </tr>
+                        <tr class="file_tr">
+                            <td class="file_left">
+                                <input type="checkbox" name="" id="">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
+                                <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
                             <td class="file_mid">34</td>
                             <td class="file_right">34</td>
