二级密码布局完成

--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/file.css"> <!--link_tag -->
+    <link rel="stylesheet" href="css/title.css"> <!--link_tag -->
 
     <title>在线网盘-全部文件</title>
     <script src="js/jquery.min.js"></script>
