二级密码布局完成

--- a/pan_view/confim_pwd.html
+++ b/pan_view/confim_pwd.html
@@ -47,10 +47,10 @@
             <div id="title_left" style="background-image: url(img/file/logo.png);"></div>
             <div id="title_main">
                 <ul class="ul_my" id="ul_title">
-                    <li class="li_float_left li_title title_active" style="margin-left: 10px;">
+                    <li class="li_float_left li_title" style="margin-left: 10px;">
                         <a href="#" class="a_block">个人资料</a>
                     </li>
-                    <li class="li_float_left li_title">
+                    <li class="li_float_left li_title title_active">
                         <a href="#" class="a_block">修改二级密码</a>
                     </li>
                 </ul>
