--- a/pan_view/confim_pwd.html
+++ b/pan_view/confim_pwd.html
@@ -12,8 +12,7 @@
 
     <title>二级密码</title>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-checkbox-set.js"></script>
-    <script src="js/file.js"></script>
+    <script src="js/file.js"></script> <!--重构-->
     <script src="js/jquery-from.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript">
