--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -14,6 +14,7 @@
     <title>在线网盘-全部文件</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-checkbox-set.js"></script>
+    <script src="js/title.js"></script>
     <script src="js/file.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
