--- a/pan_view/user_info.html
+++ b/pan_view/user_info.html
@@ -11,11 +11,48 @@
 
     <title>个人信息</title>
     <script src="js/jquery.min.js"></script>
-    <script src="js/file.js"></script> <!--等待重构-->
+    <script src="js/title.js"></script>
     <script src="js/jquery-from.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div id="warp" style="min-width: 1100px;">
+        <div id="title">
+            <div id="title_left" style="background-image: url(img/file/logo.png);"></div>
+            <div id="title_main">
+                <ul class="ul_my" id="ul_title">
+                    <li class="li_float_left li_title title_active" style="margin-left: 10px;">
+                        <a href="#" class="a_block">个人资料</a>
+                    </li>
+                    <li class="li_float_left li_title">
+                        <a href="#" class="a_block">修改二级密码</a>
+                    </li>
+                </ul>
+                <div id="title_right">
+                    <div id="user_name_group">
+                        <img src="img/user/default.jpg" id="user_name_img">
+                        <div id="user_name">用户名</div>
+                        <span class="glyphicon glyphicon-chevron-down" style="margin-right: 20px;"></span><!--向下箭头-->
+                        <div id="user_name_animation_nomal"><!--隐藏动画-->
+                            <div id="user_name_animation_top" style="background-image: url(img/file/user-level-bg-0.png);"><!--顶部-->
+                                <div id="user_name_animation_top_img_bg">
+                                    <img id="user_name_animation_top_img" src="img/user/default.jpg">
+                                </div>
+                                <span id="user_name_animation_top_username">用户名</span>
+                            </div>
+
+                            <div id="user_name_animation_main">
+                                <ul class="ul_my" style="list-style: none;">
+                                    <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>退出</li></a>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
