--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <input type="password" class="form-control" placeholder="搜索文件" aria-describedby="basic-addon1" style="display: inline;width: 200px;border-radius: 100px;">
-                    <button style="font-size: 100%;margin-left: -35px;">
+                    <button class="btn_search" style="font-size: 100%;margin-left: -35px;">
                         <span class="glyphicon glyphicon-search" style="margin-left: 5px;font-size: 15px;"></span>
                     </button>
                     
@@ -122,7 +122,7 @@
                     <button type="button" class="btn btn-light button_main_main_top" style="border: 1px #C3EAFF solid;">
                         <span class="glyphicon glyphicon-hdd" style="margin-right: 2px;"></span> 新建文件夹
                     </button>
-                    <div class="btn-group  button_main_main_top" id="btn_group" role="group" style="display: none;">
+                    <div class="btn-group button_main_main_top" id="btn_group" role="group" style="display: none;">
                         <button id="btn_download" type="button" class="btn btn-default button_main_main_top">
                             <span class="glyphicon glyphicon-cloud-download" style="margin-right: 2px;"></span>下载
                         </button>
