更新图片文件

--- a/pan_view/confim_pwd.html
+++ b/pan_view/confim_pwd.html
@@ -89,10 +89,9 @@
                 <span class="pwd_tip" id="span_pwd">密码长度为6-16个字符，区分大小写</span>
                 <br>
                 <div style="margin-top: 10px;">
-                    <span style="margin-right: 10px;">确认密码:</span>
+                    <span style="margin-right: 10px;font-size: 15px;">确认密码:</span>
                     <input id="confim_pwd" type="password" class="form-control" style="width: 170px;height: 30px;;display: inline-block;">
                     <span class="pwd_tip" id="span_confim" style="margin-left: 2px;">密码需与上面一致</span>
-
                 </div>
                 <div style="margin-top: 10px;">
                     <button type="button" class="btn btn-primary" style="width: 80px;">确定</button>
