--- a/pan_view/user_info.html
+++ b/pan_view/user_info.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/title.css"> <!--link_tag -->
+    <link rel="stylesheet" href="css/user_info.css"> <!--link_tag -->
 
     <title>个人信息</title>
     <script src="js/jquery.min.js"></script>
@@ -52,6 +53,27 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="main">
+           <div id="main_content">
+               <div id="left_list">
+                    <div id="left_list_userinfo">
+                        <div id="left_list_userinfo_username">
+                            <img src="img/user/default.jpg" style="width: 70px;height: 70px;">
+                            <p>
+                                <span id="span_left_list_userinfo_username">
+                                    用户名
+                                </span>
+                            </p>
+                            <p>
+                                <span>
+                                    34
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+               </div>
+           </div> 
         </div>
     </div>
 </body>
