--- a/pan_view/confim_pwd.html
+++ b/pan_view/confim_pwd.html
@@ -67,7 +67,7 @@
                             </div>
 
                             <div id="user_name_animation_main">
-                                <ul class="ul_my" style="list-style: none;">
+                                <ul class="ul_my">
                                     <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
                                     <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
                                     <a href="#" class="a_user_name_animation"><li>退出</li></a>
