--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -47,7 +47,7 @@
                             </div>
 
                             <div id="user_name_animation_main">
-                                <ul class="ul_my" style="list-style: none;">
+                                <ul class="ul_my">
                                     <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
                                     <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
                                     <a href="#" class="a_user_name_animation"><li>退出</li></a>
@@ -65,7 +65,7 @@
         </div>
         <div id="main">
             <div id="main_left" style="position: relative;">
-                <ul class="ul_my" id="ul_left">
+                <ul class="ul_my">
                     <a href="#" class="a_left" style="margin-top: 10px;" id="left_list_active"> <!--bug可能-->
                         <li class="li_left">
                             <span class="glyphicon glyphicon-folder-open" id="glyphicon_li_left"></span> <!--图标-->
