--- a/pan_view/user_info.html
+++ b/pan_view/user_info.html
@@ -43,7 +43,7 @@
                             </div>
 
                             <div id="user_name_animation_main">
-                                <ul class="ul_my" style="list-style: none;">
+                                <ul class="ul_my">
                                     <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
                                     <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
                                     <a href="#" class="a_user_name_animation"><li>退出</li></a>
@@ -60,17 +60,22 @@
                     <div id="left_list_userinfo">
                         <div id="left_list_userinfo_username">
                             <img src="img/user/default.jpg" style="width: 70px;height: 70px;">
-                            <p>
-                                <span id="span_left_list_userinfo_username">
-                                    用户名
-                                </span>
-                            </p>
-                            <p>
-                                <span>
-                                    34
-                                </span>
-                            </p>
+                            <div id="left_list_userinfo_username_right">
+                                <p style="margin-top: 20px;">
+                                    <span class="span_left_list_userinfo_username">用户名</span>
+                                </p>
+                                <p style="margin-top: 5px;">
+                                    <span class="span_left_list_userinfo_username" style="font-size: 12px;">欢迎您!</span>
+                                </p>
+                            </div>
                         </div>
+                    </div>
+                    <div id="left_ul">
+                        <ul class="ul_my">
+                            <li>修改资料</li>
+                            <li>修改密码</li>
+                            <li>账号注销</li>
+                        </ul>
                     </div>
                </div>
            </div> 
