1.checkbox范围扩大  2.个人信息布局完成

--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                    <input type="password" class="form-control" placeholder="搜索文件" aria-describedby="basic-addon1" style="display: inline;width: 200px;border-radius: 100px;">
+                    <input type="text" class="form-control" placeholder="搜索文件" aria-describedby="basic-addon1" style="display: inline;width: 200px;border-radius: 100px;">
                     <button class="btn_search" style="font-size: 100%;margin-left: -35px;">
                         <span class="glyphicon glyphicon-search" style="margin-left: 5px;font-size: 15px;"></span>
                     </button>
@@ -161,7 +161,9 @@
                     <table id="file_table">
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div>
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -170,7 +172,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div>                                
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -179,7 +183,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div>
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -188,7 +194,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -197,7 +205,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -206,7 +216,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -216,7 +228,9 @@
 
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -225,7 +239,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -234,7 +250,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -243,7 +261,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -252,7 +272,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -261,7 +283,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -270,7 +294,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -279,7 +305,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -288,7 +316,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
@@ -297,7 +327,9 @@
                         </tr>
                         <tr class="file_tr">
                             <td class="file_left">
-                                <input type="checkbox" name="" id="">
+                                <div class="checkbox_div">
+                                    <input type="checkbox" name="" id="">
+                                </div> 
                                 <img src="img/file/file_ico/folder.png" class="file_img">
                                 <a href="#" class="a_file_name"><span class="file_name">麻瓜编程2017</span></a>
                             </td>
