--- a/pan_view/confim_pwd.html
+++ b/pan_view/confim_pwd.html
@@ -46,11 +46,8 @@
             <div id="title_left" style="background-image: url(img/file/logo.png);"></div>
             <div id="title_main">
                 <ul class="ul_my" id="ul_title">
-                    <li class="li_float_left li_title" style="margin-left: 10px;">
-                        <a href="#" class="a_block">个人资料</a>
-                    </li>
-                    <li class="li_float_left li_title title_active">
-                        <a href="#" class="a_block">修改二级密码</a>
+                    <li class="li_float_left li_title title_active" style="margin-left: 10px;">
+                        <a href="#" class="a_block">设置二级密码</a>
                     </li>
                 </ul>
                 <div id="title_right">
@@ -69,7 +66,7 @@
                             <div id="user_name_animation_main">
                                 <ul class="ul_my">
                                     <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
-                                    <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>二级密码</li></a>
                                     <a href="#" class="a_user_name_animation"><li>退出</li></a>
                                 </ul>
                             </div>
@@ -81,7 +78,7 @@
         <div id="main">
             <div id="main_top">
                 <span class="span_strong">设置二级密码</span>
-                <span class="span_lit_title">设置密码后删除文件需要二次验证(确定后不能修改)</span>
+                <span class="span_lit_title">设置密码后删除文件需要二次验证</span>
             </div>
             <div id="main_main">
                 <span style="margin-right: 10px;">二级密码:</span>
