--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -49,7 +49,8 @@
                             <div id="user_name_animation_main">
                                 <ul class="ul_my">
                                     <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
-                                    <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
+                                    <!-- 无二级密码跳设置 有跳修改密码-->
+                                    <a href="#" class="a_user_name_animation"><li>二级密码</li></a>
                                     <a href="#" class="a_user_name_animation"><li>退出</li></a>
                                 </ul>
                             </div>
