--- a/pan_view/change_pwd.html
+++ b/pan_view/change_pwd.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/title.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/user_info_default.css"> <!--link_tag -->
-    <link rel="stylesheet" href="css/user_info.css"> <!--link_tag -->
 
     <title>个人信息</title>
     <script src="js/jquery.min.js"></script>
@@ -74,13 +73,13 @@
                     </div>
                     <div id="div_left_ul">
                         <ul class="ul_my" style="margin-top: 20px;">
-                            <a href="#" class="a_left" style="margin-top: 10px;" id="left_list_active">
+                            <a href="#" class="a_left" style="margin-top: 10px;">
                                 <li class="li_left">
                                     <span class="glyphicon glyphicon-user" id="glyphicon_li_left"></span> <!--图标-->
                                     个人信息
                                 </li>
                             </a>
-                            <a href="#" class="a_left">
+                            <a href="#" class="a_left"  id="left_list_active">
                                 <li class="li_left">
                                     <span class="glyphicon glyphicon-lock" id="glyphicon_li_left"></span> <!--图标-->
                                     修改密码
@@ -97,46 +96,17 @@
                 </div>
                 <div id="right_main">
                     <div id="right_main_top">
-                        <span class="span_right_main_top">个人信息</span>
-                   </div>
+                        <span class="span_right_main_top">修改密码</span>
+                    </div>
                     <div id="right_main_main">
                         <div id="right_main_main_left">
                             <div class="right_main_main_left_item">
                                 <span class="span_right_main_main_left_attr">用户名:</span>
                                 <input type="text" class="form-control input_right_main_main_left" placeholder="UserName">
                             </div>
-                            <div class="right_main_main_left_item">
-                                <span class="span_right_main_main_left_attr">性别:</span>
-                                <input type="radio" name="sex" id="man" style="margin-left: 15px;">男
-                                <input type="radio" name="sex" id="women" style="margin-left: 30px;">女
-                            </div>
-                            <div class="right_main_main_left_item">
-                                <span class="span_right_main_main_left_attr">公开邮箱:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="E-mail">
-                            </div>
-                            <div class="right_main_main_left_item">
-                                <span class="span_right_main_main_left_attr">手机号:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="PhoneNumber">
-                            </div>
-                            <div class="right_main_main_left_item">
-                                <span class="span_right_main_main_left_attr">个人网站:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="URL">
-                            </div>
-                            <div class="right_main_main_left_item">
-                                <span class="span_right_main_main_left_attr">地理位置:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="Location">
-                            </div>
                             <div class="right_main_main_left_item" style="float: right;">
                                 <button type="button" class="btn btn-success" style="margin-right: 5px;width: 100px;">交提更新</button>
                             </div>
-                        </div>
-                        <div id="right_main_main_right">
-                            <input id="change_img" type="image" src="img/user/default.jpg" width="100" height="100">
-                            <div id="in_img_tip">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span>点击以编辑</span>
-                            </div>
-                            <span>100×100</span>
                         </div>
                     </div>
                 </div>
