--- a/pan_view/user_info.html
+++ b/pan_view/user_info.html
@@ -14,11 +14,11 @@
     <title>个人信息</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/title.js"></script>
-    <script src="js/jquery-from.js"></script>
+    <script src="js/jquery-from.js"></script> <!--有时间也做个判断-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="warp" style="min-width: 1100px;">
+    <div id="warp" style="min-width: 1100px;min-height: 700px;">
         <div id="title">
             <div id="title_left" style="background-image: url(img/file/logo.png);"></div>
             <div id="title_main">
@@ -103,7 +103,7 @@
                         <div id="right_main_main_left">
                             <div class="right_main_main_left_item">
                                 <span class="span_right_main_main_left_attr">用户名:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="UserName">
+                                <input type="text" class="form-control input_right_main_main_left" placeholder="User Name">
                             </div>
                             <div class="right_main_main_left_item">
                                 <span class="span_right_main_main_left_attr">性别:</span>
@@ -116,7 +116,7 @@
                             </div>
                             <div class="right_main_main_left_item">
                                 <span class="span_right_main_main_left_attr">手机号:</span>
-                                <input type="text" class="form-control input_right_main_main_left" placeholder="PhoneNumber">
+                                <input type="text" class="form-control input_right_main_main_left" placeholder="Phone Number">
                             </div>
                             <div class="right_main_main_left_item">
                                 <span class="span_right_main_main_left_attr">个人网站:</span>
