--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -123,7 +123,7 @@
                     <button type="button" class="btn btn-light button_main_main_top" style="border: 1px #C3EAFF solid;">
                         <span class="glyphicon glyphicon-hdd" style="margin-right: 2px;"></span> 新建文件夹
                     </button>
-                    <div class="btn-group button_main_main_top" id="btn_group" role="group" style="display: none;">
+                    <div class="btn-group button_main_main_top" id="btn_group" style="display: none;">
                         <button id="btn_download" type="button" class="btn btn-default button_main_main_top">
                             <span class="glyphicon glyphicon-cloud-download" style="margin-right: 2px;"></span>下载
                         </button>
